--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~5.0.5",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "expo": "48.0.0",
-    "expo-permissions": "^14.4.0",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "expo": "^54.0.21",
+    "expo-location": "~19.0.7",
+    "expo-permissions": "~14.1.1",
+    "expo-sqlite": "~16.0.8",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-web": "^0.20.0",
-    "expo-sqlite": "~15.2.14",
-    "expo-location": "~18.1.6"
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
